most of backend logic is done

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -15,6 +15,9 @@
   <body>
     <div class="header">
       <div class="logo">
+        <div class="header__back">
+          <i class="fas fa-angle-left"></i>
+        </div>
         <h3>Video Chat</h2>
       </div>
     </div>  
@@ -32,6 +35,9 @@
           </div>
           <div id="muteButton" class="options__button">
             <i class="fa fa-microphone"></i>
+          </div>
+          <div id="showChat" class="options__button">
+            <i class="fa fa-comment"></i>
           </div>
         </div>
         <div class="options__right">
