--- a/views/room.ejs
+++ b/views/room.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>videoChatApp</title>
+    <title>YOOM</title>
     <link rel="stylesheet" href="style.css" />
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
@@ -18,7 +18,7 @@
         <div class="header__back">
           <i class="fas fa-angle-left"></i>
         </div>
-        <h3>Video Chat</h2>
+        <h3>Yoom</h2>
       </div>
     </div>  
     <div class="main">  
